feat: implement Workflow Assistance V1
